# cloud-api-starter

./: README.md  api-tests.ps1  cloud-api-starter.sln  create-dotnet-project.sh  docker-compose.yml
TodoApi/: Dockerfile.dev  Program.cs  README.md  TodoApi.csproj
TodoApi/Controllers/: TodoItemsController.cs  VehicleController.cs
TodoApi/Models/: TodoItem.cs  Vehicle.cs  VehicleContext.cs
TodoApi/Properties/: launchSettings.json
TodoApi/certs/.aspnet/https/: aspnetapp.pfx
db-init/: init.sql
dotnet-api/: .dockerignore  Dockerfile.dev  Program.cs  appsettings.Development.json  appsettings.json  dotnet-api.csproj  dotnet-api.http  dotnet-api.sln  entrypoint.sh
dotnet-api/Models/: Vehicle.cs  VehicleContext.cs  VehicleController.cs
java-api/: Dockerfile.dev  README.md  pom.xml
java-api/src/main/java/com/java/java_api/: JavaApiApplication.java  README.md
java-api/src/main/java/com/java/java_api/controller/: VehicleController.java
java-api/src/main/java/com/java/java_api/model/: Vehicle.java  VehicleUpdateDto.java
java-api/src/main/java/com/java/java_api/repository/: VehicleRepository.java
java-api/src/main/java/com/java/java_api/service/: VehicleService.java
java-api/src/main/resources/: application.properties
java-api/src/test/java/com/java/java_api/: JavaApiApplicationTests.java
python-api/: Dockerfile.dev  README.md  requirements.txt
python-api/src/: main.py
rust-api/: Cargo.toml  Dockerfile.dev  README.md  api-tests.ps1
rust-api/src/: main.rs  vehicle.rs
rust-api/src/utils/: mod.rs
