[package]
name = "cloud-api-starter"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = { version = "0.8.4", features = ["macros"] }
hyper = "1.7.0"
serde = { version = "1.0.219", features = ["derive"] }
tokio = { version = "1.47.1", features = ["full"] }
uuid = { version = "1.18.0", features = ["v4"] }
