[package]
name = "cloud-api-starter"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = { version = "0.8.4", features = ["macros"] }
deadpool-postgres = "0.14.1"
dotenv = "0.15.0"
serde = { version = "1.0.219", features = ["derive"] }
tokio = { version = "1.47.1", features = ["full"] }
tokio-postgres = "0.7.13"
uuid = { version = "1.18.0", features = ["v4"] }
