[package]
name = "cloud-api-starter"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = { version = "0.8.4", features = ["macros"] }
deadpool-postgres = "0.14.1"
dotenv = "0.15.0"
serde = { version = "1.0.219", features = ["derive"] }
tokio = { version = "1.47.1", features = ["full"] }
tokio-postgres = { version = "0.7", features = ["with-uuid-1"] }
uuid = { version = "1.8", features = ["v4", "serde"] }